creating the pyproject

--- a/project.ipynb
+++ b/project.ipynb
@@ -8,7 +8,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "261359b2",
    "metadata": {},
    "outputs": [
@@ -86,9 +86,7 @@
     "import streamlit as st\n",
     "\n",
     "st.set_page_config(page_title=\"Weekly U.S. Petroleum Supply\", layout=\"wide\")\n",
-    "st.title(\n",
-    "    \"The Corelation between Weekly U.S. Petroleum Product Supplied and WTI Crude Oil Price\"\n",
-    ")\n",
+    "st.title(\"The Corelation between Weekly U.S. Petroleum Product Supplied and WTI Crude Oil Price\")\n",
     "st.caption(\"Source: U.S. Energy Information Administration\")\n",
     "\n",
     "# -----------------------------\n",
@@ -204,7 +202,8 @@
     "\n",
     "\n",
     "st.caption(\n",
-    "    \"Note: 'Product supplied' is often used as a proxy for consumption. This visualization is descriptive (not causal).\"\n",
+    "    \"Note: 'Product supplied' is often used as a proxy for consumption. \"\n",
+    "    \"This visualization is descriptive (not causal).\"\n",
     ")\n"
    ]
   }
